syntax = "proto3";

package gss;



service GbtStreamService {
    rpc bind_stream_port (BindStreamPortRequest) returns (BindStreamPortResponse) {}
    rpc free_stream_port (FreeStreamPortRequest) returns (FreeStreamPortResponse) {}
}


enum StreamSetupType {
    no_mans_land_c3916a6 = 0;
    udp = 1;
    passive = 2;
    active = 3;
}


enum ResponseCode {
    ok = 0;
    no_ports_free = 1;
    bind_port_error = 2;
    run_stream_service_error = 3;
}


message BindStreamPortRequest {
    string gb_code = 1;
    uint32 stream_id = 2;
    StreamSetupType setup_type = 3;
}


message BindStreamPortResponse {
    ResponseCode code = 1;
    string message = 2;
    string media_server_ip = 3;
    uint32 media_server_port = 4;
}


message FreeStreamPortRequest {
    string gb_code = 1;
    uint32 stream_id = 2;
    string media_server_ip = 3;
    uint32 media_server_port = 4;
}


message FreeStreamPortResponse {
    ResponseCode code = 1;
    string message = 2;
}

